--- a/index.html
+++ b/index.html
@@ -87,5 +87,5 @@ body{
 	NOTICE: you have to wrap the "slider-line" node with a node regarded as a viewport
 -->
 <script>
-	new KissSlider("myslider","prev-btn","next-btn").validate();
+	$("#myslider").kissSlider("validate");
 </script>
